loading screen and pause/stop feature added

--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,5 +1,6 @@
-<section>
-<mat-progress-spinner mode="determinate" value="20">
-
-</mat-progress-spinner>
+<section class= "current-training" fxLayout="column" fxLayoutAlign="center center">
+<mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+    <h1> Progress....{{progress}} % </h1>
+    <p>Keep doing... You can finish it !!</p>
+    <button mat-raised-button color="accent" (click)="onStop()">Stop</button>
 </section>
