--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,18 +1,18 @@
 <mat-nav-list>
-    <a mat-list-item routerLink="/signup" (click)=close()>
+    <a mat-list-item routerLink="/signup" (click)='close()' *ngIf="!isAuth">
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Signup</span>
     </a>
-    <a mat-list-item routerLink="/login" (click)=close()>
+    <a mat-list-item routerLink="/login" (click)='close()' *ngIf="!isAuth">
         <mat-icon>insert_emoticon</mat-icon>
         <span class="nav-caption">Login</span>
     </a>
-    <a mat-list-item routerLink="/training" (click)=close()>
+    <a mat-list-item routerLink="/training" (click)='close()' *ngIf="isAuth">
     <mat-icon>directions_run</mat-icon>
     <span class="nav-caption">Training</span>
     </a>
     <mat-list-item>
-        <button mat-icon-button (click)=close()>
+        <button mat-icon-button (click)='onLogout()' *ngIf="isAuth">
             <mat-icon>eject</mat-icon>
             <span class="nav-caption">Log out</span>
         </button>
