--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -10,7 +10,7 @@
             <li *ngIf="!isAuth"><a routerLink="/signup">Signup</a></li>
             <li *ngIf="!isAuth"><a routerLink="/login">Login</a></li>
             <li *ngIf="isAuth"><a routerLink="/training">Training</a></li>
-            <li *ngIf="isAuth"><a style="cursor: pointer;" (click)="onLogout()" routerLink="/logout">LogOut</a></li>
+            <li *ngIf="isAuth"><a style="cursor: pointer;" (click)="onLogout()">LogOut</a></li>
         </ul>
     </div>
 </mat-toolbar>
