--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -1,7 +1,13 @@
+<div fxLayoutAlign="center center">
+    <mat-form-field fxFlex="40%">
+        <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+</div>
+
 <mat-table [dataSource] = "dataSource" matSort>
     <ng-container matColumnDef="date">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-        <mat-cell *matCellDef = "let element">{{element.date | date}}</mat-cell>
+        <mat-cell *matCellDef = "let element">{{element.date.toDate() | date}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="name">
@@ -27,3 +33,8 @@
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 </mat-table>
+
+<mat-paginator
+              [pageSize]="1"
+              [pageSizeOptions]="[1, 5, 10, 25, 100]">
+</mat-paginator>
