--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -3,7 +3,7 @@
         <mat-icon>menu</mat-icon>
     </button></div>
     <div>
-        <a routerLink="/">LOGO</a>
+        <a routerLink="/">Ng Fitness</a>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.lt-md>
         <ul fxLayout fxLayoutGap="10px" class="nav-items">
