--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -3,26 +3,28 @@
         <mat-card fxFlex.xs=100% fxFlex="400px">
             <mat-card-title fxLayoutAlign="center">Time to workout !</mat-card-title>
             <mat-card-content fxLayoutAlign="center">
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" *ngIf="!isLoading && exercises">
                     <mat-label>Trainings</mat-label>
                     <mat-select placeholder="Favorite food" ngModel name="exercise" required>
                         <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
                             {{exercise.name}}
                         </mat-option>
                         <!-- <mat-option value="bicep">
-            Bicep
-        </mat-option>
-        <mat-option value="touch-toes">
-            Touch Toes
-        </mat-option>
-        <mat-option value="burpees">
-            Burpees
-        </mat-option> -->
+                                Bicep
+                            </mat-option>
+                            <mat-option value="touch-toes">
+                                Touch Toes
+                            </mat-option>
+                            <mat-option value="burpees">
+                                Burpees
+                            </mat-option> -->
                     </mat-select>
                 </mat-form-field>
+                <mat-spinner *ngIf="isLoading"></mat-spinner>
             </mat-card-content>
-            <mat-card-actions fxLayoutAlign="center">
-                <button type="submit" mat-button [disabled]="f.invalid">Start</button>
+            <mat-card-actions fxLayoutAlign="center" *ngIf="!isLoading">
+                <button *ngIf="exercises" type="submit" mat-button [disabled]="f.invalid">Start</button>
+                <button *ngIf="!exercises" type="button" mat-button (click)="fetchExercises()">Fetch Again</button>
             </mat-card-actions>
         </mat-card>
     </form>
